samples/_failures_safe/1761359814_72f788_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc2e303b.c: In function ‘main’:
./samples/SAFE/__tmp_bc2e303b.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
